# ot-practice

./: .env.test  .gitignore  DATABASE_FILE_PATH  README.md  database.sqlite  pyproject.toml  pytest.ini  tasks.py
calculators/week1/: commandline.txt  gitlog.txt
documentation/: arhitektuuri.md  changelog.md  requirements_specification.md  testing_document.md  timekeeping.md  user_manual.md
laskarit/week2/maksukortti/: pyproject.toml
laskarit/week2/maksukortti/src/tests/: maksukortti_test.py
laskarit/week2/poetry-test/: pyproject.toml
laskarit/week2/poetry-test/src/: index.py
laskarit/week2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/week3/: task1.md  task2.md  task3.md  task4.md
src/: begin.py  config.py  database_connection.py  initialize_database.py  intialize_database.py  main.py
src/entities/: equation.py
src/repositories/: equation_repository.py  user_repository.py
src/services/: calculator_service.py  find_derivative.py  user_service.py
src/tests/: equation_repository_test.py  find_derivative_service_test.py  user_repository_test.py  user_service_test.py
src/ui/: create_user_view.py  derivative_finder_view.py  found_derivative_view.py  login_view.py  ui.py
