[tool.poetry]
name = "ot-practice"
version = "0.1.0"
description = ""
authors = ["Kirke Ruusalu <kirke.ruusalu@gmail.com>"]
readme = "README.md"
packages = [{include = "ot_practice"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
